@@ -1,0 +1,161 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+	<head>
+		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<meta name="generator" content="Adobe GoLive 4">
+		<title>SDCC links page</title>
+	</head>
+
+	<body bgcolor="white" link="teal" vlink="#483d8b">
+
+<div align="Left">
+<h2><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>SDCC - Links and More !</i></font></h2>
+ 			
+<p> 			
+<table border="0" cellpadding="2" cellspacing="1" width="100%" bgcolor="white">
+<tbody><tr><td width="15%" valign="Top">
+	<div align="Left">
+	<b><a href="http://sdcc.sourceforge.net/"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>SDCC Home</i></font></a></b>
+		<div style="padding-left: 1em"><small>
+		<a href="http://sdcc.sourceforge.net/#Who"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Who</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/#Platforms"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Platforms</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/#Download"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Download</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/#News"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>News</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/#Support"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Support</i></font></a><br><br>
+		</small></div>
+
+	<b><a href="http://sdcc.sourceforge.net/snap.php"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Snapshots</i></font></a></b>
+		<div style="padding-left: 1em"><small>
+		<a href="http://sdcc.sourceforge.net/snap.php#Linux"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Linux</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/snap.php#Windows"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Windows</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/snap.php#Source"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Source</i></font></a><br><br>
+		</small></div>
+
+	<b><a href="http://sdcc.sourceforge.net/doc/"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Documentation</i></font></a></b>
+		<div style="padding-left: 1em"><small>
+		<a href="http://sdcc.sourceforge.net/doc/sdccman.html/"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>SDCC Manual</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/doc/test_suite_spec.html/"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Test Suite</i></font></a><br>
+		<a href="http://sdcc.sourceforge.net/doc/cdbfileformat.html/"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>CDB Format</i></font></a><br><br>
+		</small></div>
+
+	<b><a href="http://sdcc.sourceforge.net/links.html"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>Links and More!</i></font></a></b>
+	</div>
+
+<td width="85%"> 						
+
+		<p>
+		<table border="0" cellpadding="0" cellspacing="1" width="100%" bgcolor="#5f9ea0">
+			<tr>
+				<td><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i><b>Links - General</b></i></font></td>
+			</tr>
+		</table>
+
+		<p><a href="http://www.willem.org/nprome.htm"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2">PcGenerator</font></a><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2"> EpromProgrammer,Pic24C and more...<br>
+		<a href="http://www.needhams.com">Needham Electronics</a> - various device programmers, all sizes, all prices<a href="http://www.sensorella.da.ru"><br>
+		Sensorella</a> - Dual 8051 board, ADCs and <i>lots</i> of I/O.<br>
+		<a href="http://www.systronix.com">Systronix</a> - Makers of the STEP and STEP+ for the DallasTINI board (a must see for embedded ethernet and Dallas 390's)<br>
+		<a href="http://www.kd0yu.com">KD0YU.COM</a> - Misc stuff, mirrors SDCC when it's not doing anything else. (Oct,2000 - Re-designed)<br>
+		<a href="http://www.microcontroller.com">Microcontroller.com</a> - Micros and Embedded stuff. </font><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="1">Not to be confused with microcontrollers.com (Arrow Electronics... what a joke!)<br>
+		</font><a href="http://www.aesmicro.com/8051.htm"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2">AES Micro</font></a><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2"> - nice but a bit expensive, may be just what some one needs though.<br>
+		<a href="http://home.nc.rr.com/rtpmicro/">RTP Micros</a> - 2 very nice Phillips '552 boards with all the trimmings. Nice price too.<br>
+		<a href="mailto:karl@turbobit.com">Karl Bongers</a> has a start
+		on a <a href="http://www.turbobit.com/sdcc.html">Summary/FAQ</a> about SDCC. (*highly* recommended reading!)<br>
+		<a href="http://www.rabbitsemiconductor.com">Rabbit Semiconductor</a> - Z-World based boards, very small and lots of I/O. Kits available.<br>
+		<a href="http://www.flexgate.de">FlexGate</a> - '552 based boards with onboard ethernet. (German, not much on the web site yet)<br>
+		</font></p>
+		<p>
+
+		<table border="0" cellpadding="0" cellspacing="1" width="100%" bgcolor="#5f9ea0"><tr>
+		  <td><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i><b>Links - Code Sources</b></i></font></td>
+		</tr></table>
+
+		<p><a href="http://www4.tpg.com.au/users/void/bkauler"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2">Goofee</font></a><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2"> - Graphical Object Orientation, very different, very interesting. <b>NOTE</b>: Link updated Jan 6,2001<br>
+		<a href="http://www.programmersheaven.com/zone5/cat27/index.htm">Programmers Heaven</a> - 8051 resources, sample code and compilers<br>
+		<a href="http://www.moonbounce.dk/embedded.htm">Carsten Groen, OZ9AAR</a> - This looked interesting, a Dallas DS5000 to IDE Hard drive interface with C code.<br>
+		<a href="http://www.pjrc.com/tech/8051/index.html">Paul Stoffregen's Home Page</a> - Home of PAULMON and other code snippets.<br>
+		<a href="http://www.8052.com">8052.COM</a> - resources, sample code.<br>
+		</font></p>
+		<p>
+		<table border="0" cellpadding="0" cellspacing="1" width="100%" bgcolor="#5f9ea0"><tr>
+			<td><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i><b>Links - Circuit Boards and EDA software</b></i></font></td>
+			</tr>
+		</table>
+
+		<p><a href="http://www.geocities.com/pdmtr"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2">PC board HOWTO using Press &amp; Peel Tech Film</font></a><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2"><br>
+		<a href="http://www.teckniks.com">Teckniks</a> - makers of the Press-n-Peel transfer film.<br>
+		<a href="http://www.cadsoft.de">CadSoft</a> - makers of Eagle EDA software, download a free (somewhat restricted) version for Win32 or Linux.<br>
+		</font></p>
+
+		<p>
+		<table border="0" cellpadding="0" cellspacing="1" width="100%" bgcolor="#5f9ea0">
+			<tr>
+				<td><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i><b>Links - IC Data and Searches</b></i></font></td>
+			</tr>
+		</table>
+
+		<p><a href="http://www.hitex.com/chipdir/chipdir.htm"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2">The Chip Directory</font></a><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2"> - Searchable web space for all kinds of semi's<br>
+		<a href="http://www.datasheetlocator.com">DataSheetLocator</a> - This is just the most fabulous web site I have been to in a long time. Need info? Go here!<br>
+		<a href="http://www.iox.co.za/~epanorama.html">ePanorama</a> - interesting site for electronic information.<br>
+		</font></p>
+		<p>
+		<table border="0" cellpadding="0" cellspacing="1" width="100%" bgcolor="#5f9ea0">
+			<tr>
+				<td><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i><b>Links - Embedded Ethernet</b></i></font></td>
+			</tr>
+		</table>
+
+		<p>
+		<font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">
+		<a href="http://www.egnite.de/ethernut/">Ethernut</a> - a small embedded ethernet add-on for micros. Full internet node support. This is an open hardware and software project.<br>
+		<a href="mailto:werner.cornelius@gmx.de">Werner Cornelius</a> has a <a href="http://www.titro.de/ethernet/">web page</a> devoted to embedding the RealTek RTL8019AS ethernet controller chip into a microcontroller. Lots of small tips on wiring, what to do, and what not to do.</font></p>
+		<p>
+		<table border="0" cellpadding="0" cellspacing="1" width="100%" bgcolor="#5f9ea0">
+			<tr>
+				<td><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i><b>Links - LCD Stuff</b></i></font></td>
+			</tr>
+		</table>
+
+		<p><font size="4"><b>T6963 controlled LCD panels </b>(</font>includes the Optrex DM-5000 series and others)
+		<p>
+
+		<font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">A couple of pictures of an lcd panel with a familiar phrase.</font><br>
+<a href="lcd/MVC-003X.JPG"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">LCD picture 1 - full view</font></a><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">  Feb 15,2000 10:54:02 PM  (133K jpg) </font><br>
+<a href="lcd/MVC-006X.JPG"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">LCD picture 2 - close up</font></a><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">  Feb 15,2000 10:57:06 PM   (139K jpg)</font><br>
+<a href="lcd/lcdsource.tar.gz"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">source</font></a><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"> written by <a href="mailto:dave@kd0yu.com">Dave Helton</a>, (compile with sdcc) (44K tar.gz format)</font><br>
+<p>
+<font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">Note:</font><br>
+<font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">  There are no docs for the source... yet ;-)  This is alpha-ware at best.  It works in my system.  Through the winter of 2000-01 I will be updating the code and writing some docs.  This may force me to write better code if I have to document it.  Your feedbeed back on the code is welcome.  If you have enhanced the code, made a better mouse trap... please email me and let me know.</font>
+		<p></p>
+
+		<hr>
+
+		<p><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2"><i>If you have a link to an embedded application, either hardware or software, that you believe would be of interest to other readers, drop either myself or the list members a note.</i></font></p>
+		<p><a href="http://sourceforge.net/tracker/?func=add&amp;group_id=599&amp;atid=536150"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2">Send us your link!</font></a></p>
+		<p></p>
+
+		<hr>
+
+		<p></p>
+		<table border="0" cellpadding="0" cellspacing="2" width="100%">
+			<tr>
+				<td><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><i>This Site Hosted by</i></font>
+					<p><a href="http://www.sourceforge.net"><img height="31" width="88" src="images/sourceforge.jpg" align="middle" alt="SourceForge"></a></td>
+				<td>
+					<div align="right">
+						<a href="http://sourceforge.net/tracker/?func=add&amp;group_id=599&amp;atid=536150"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">Webmaster</font></a>
+						<p><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">
+						Last updated:
+						<!-- <csobj w="193" h="16" t="DateTime" format="LongDate" locale="00000409" region="0"> -->
+						January 31, 2003
+						<!-- </csobj> -->
+						</font>
+					</div>
+				</td>
+			</tr>
+		</table>
+
+		<p><a href="http://sdcc.sourceforge.net"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular"><b>HOME</b></font></a>
+</td></tr></table>
+</div>
+</body>
+</html>
